further tweak of masthead and flyer to rationalise css for other articles
and removing the crappy arts2 images from the repo

--- a/EofA Website/index.html
+++ b/EofA Website/index.html
@@ -19,12 +19,12 @@
 				<div class="nav">
 					  <ul>
 						  <li>
-							  <a href="#flyer">
+							  <a href="#cfp">
 							    <div class="icon"><div class="listtext">CFP</div></div>
 							  </a>
 						  </li>
 						  <li>
-							  <a href="#cfp">
+							  <a href="#resources">
 							    <div class="icon"><div class="listtext">Resources</div></div>
 							  </a>
 						  </li>
@@ -49,7 +49,7 @@
 			</div>
 		</header>
 		<article>
-			<div id="flyer">
+			<div id="flyer" class="wrapper">
 			  <header>
   			<div class="flyerheader">
   			  <a name="flyer"></a>
@@ -67,11 +67,12 @@
 				    <p class="caption-text">This workshop aims to bring together researchers and professionals with interests in performance, interaction and technology who are working on understanding, instrumenting or experimenting with these dynamics, and the shifting ends of audience that they reveal.</p>
 				  </div>
         </div>
+        <div> { a bit of vertical space to finish the flyer section } </div>
       </div>
-      <div> { a bit of vertical space to finish the flyer section } </div>
 		</article>
 		<article>
 		  <header>
+  		  <a name="cfp"></a>
 		    <h1>Call for proposals</h1>
 		  </header>
       <section>
@@ -148,6 +149,7 @@
 		</article>
 		<article>
 		    <header>
+  		    <a name="resources"></a>
 		      <h1>Resources</h1>
 		    </header>
 		    <ul>
@@ -159,6 +161,7 @@
 		</article>
 				<article>
 		    <header>
+  		    <a name="contact"></a>
 		      <h1>Contact</h1>
 		    </header>
 		    <p>All correspondence to: <a href:"mailto:audience@qmedia.qmul.ac.uk">audience@qmedia.qmul.ac.uk</a></p>
