--- a/EofA Website/index.html
+++ b/EofA Website/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="utf-8"/>
-		<title>The Ends of Audience - </title>
+		<title>The Ends of Audience - Interdisciplinary Workshop - May 2012</title>
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
@@ -19,19 +19,19 @@
 				<div class="nav">
 					  <ul>
 						  <li>
-							  <a href="#cfp">
-							    <div class="icon"><div class="listtext">CFP</div></div>
-							  </a>
+							<a href="#cfp">
+							<div class="icon icon-cfp"><div class="listtext">CFP</div></div>
+							</a>
 						  </li>
 						  <li>
-							  <a href="#resources">
-							    <div class="icon"><div class="listtext">Resources</div></div>
-							  </a>
+							<a href="#resources">
+							<div class="icon icon-resources"><div class="listtext">Resources</div></div>
+							</a>
 						  </li>
 						  <li>
 						  <a href="#contact">
-						    <div class="icon"><div class="listtext">Contact</div></div>
-							  </a>
+						  	<div class="icon icon-contact"><div class="listtext">Contact</div></div>
+							</a>
 						  </li>
 					  </ul>
 				</div>
@@ -54,100 +54,104 @@
   			<div class="flyerheader">
   			  <a name="flyer"></a>
   			  <h1>Ends of Audience</h1>
-          <h2>An international workshop on audiences and interaction</h2>
+          <h2>An interdisciplinary workshop on audiences and interaction</h2>
   			</div>
   			</header>
         <div id="contentwrapper">
           <div class="caption-box">
-            <div class="caption-arrow"></div>
+            <div class="caption-arrow-left">
 				    <p class="caption-text">People in audiences act: they talk, clap, heckle, sigh, inhale, exhale, rustle, twitch, tweet, dance, flirt, laugh, whisper, shuffle, cough... in doing so, they interact. There is a structure and dynamic to these responses which is central to the experience of being in a live audience. </p>
 				  </div>
-				  <div class="caption-box">
-				    <div class="caption-arrow"></div>
+			</div>
+			<div class="caption-box">
+				<div class="caption-arrow-left">
 				    <p class="caption-text">This workshop aims to bring together researchers and professionals with interests in performance, interaction and technology who are working on understanding, instrumenting or experimenting with these dynamics, and the shifting ends of audience that they reveal.</p>
-				  </div>
+				</div>
+			</div>
         </div>
-        <div> { a bit of vertical space to finish the flyer section } </div>
       </div>
 		</article>
 		<article>
-		  <header>
-  		  <a name="cfp"></a>
-		    <h1>Call for proposals</h1>
-		  </header>
-      <section>
-        <h2>Outline</h2>
-        <p>People in audiences act: they talk, clap, heckle, sigh, inhale, exhale, rustle, twitch, tweet, dance, flirt, laugh, whisper, shuffle, cough... in doing so, they interact. There is a structure and dynamic to these responses which is central to the experience of being in a live audience. This workshop aims to bring together researchers and professionals with interests in performance, interaction and technology who are working on understanding, instrumenting or experimenting with these dynamics, and the shifting ends of audience that they reveal.</p>
-        <p>We invite proposals for oral presentations, live demonstrations, installations and performance experiments that explore the nature of interaction in audiences. We especially welcome interventions, participatory formats and creative approaches to convening workshop sessions. Topics include but are not restricted to:<br>
-        <ul>
-          <li>the dynamics of collective and individual experiences of performance,</li>
-          <li>the communicative organisation of audience-audience interaction,</li>
-          <li>non-verbal interaction and emotional contagion,</li>
-          <li>remote and co-present audience interactions,</li>
-          <li>the phenomenology of audience interaction,</li>
-          <li>changing historical and cultural understanding of the audience,</li>
-          <li>technologies and methods for sensing audience dynamics,</li>
-          <li>technologies and methods for enhancing and manipulating audience engagement.</li>
-        </ul>
-        </p>
-      </section>		  
-      <section>
-        <h2>Location</h2>
-        <p>The workshop will take place in the new Arts 2 building at Queen Mary University of London. Spaces include black box theatre, lecture theatre, foyer and breakout rooms. Specifications are available on request.</p>
-      </section>
-      <section>
-        <h2>Submission Format</h2>
-        <p>A two page summary including: a 300 word abstract, methods and rationale for your work, a specification of format and any technical requirements.</p>
-        <p>Document in PDF format submitted via email to: <a href="mailto:audience@qmedia.qmul.ac.uk?Subject=EofA Proposal">audience@qmedia.qmul.ac.uk</a></p>
-        <p>To be submitted by Monday 30th January, Midnight GMT.</p>
-      </section>
-      <section>
-        <h2>Workshop Chairs</h2>
-        <ul>
-          <li>Prof. Pat Healey, School of Electronic Engineering and Computer Science, Queen Mary University of London, London.</li>
-          <li>Prof. Michael Schober, Department of Psychology, New School, New York.</li>
-          <li>Dr Martin Welton, Department of Drama, Queen Mary University of London, London.</li>
-        </ul>
-      </section>
-      <section>
-        <h2>Programme Committee</h2>
-        <ul>
-          <li>Prof. Martin Barker, Theatre, Film and Television Studies, Aberystwyth University, UK.</li>
-          <li>Mathias Broth, Associate Professor, Department of Culture and Communication (IKK), Linköping University, Sweden.</li>
-          <li>Prof. Elaine Chew, School of Electronic Engineering and Computer Science, Queen Mary University of London, UK.</li>
-          <li>Prof. Beryl Graham, Curatorial Resource for Upstart Media Bliss, University of Sunderland, UK.</li>
-          <li>Dr Sarah Cook, Curatorial Resource for Upstart Media Bliss, University of Sunderland, UK.</li>
-          <li>Steve Dietz, Artistic Director & President, Northern Lights.mn, Minneapolis, USA.</li>
-          <li>Darren O'Donnell, Artistic Director Mammalian Diving Reflex, Toronto, Canada.</li>
-          <li>Colombine Gardair, Interaction, Media and Communication Research Group, Queen Mary University of London, UK.</li>
-          <li>Prof. Barry Ife, Guildhall School of Music & Drama, London, UK.</li>
-          <li>Prof. Ann Light, School of Design, Northumbria University, UK.</li>
-          <li>Prof. Paul Luff. Centre for Work, Interaction and Technology, King's College, London, UK.</li>
-          <li>Eddie Nixon, Director of Theatre and Artist Development, The Place, London, UK.</li>
-          <li>Julian Priest, Researcher, Interdisciplinary Unit, A.U.T, Auckland, New Zealand.</li>
-          <li>Dr Stuart Reeves, Horizon Digital Economy Research, University of Nottingham, UK.</li>
-          <li>Nic Sandiland, Independent Artist & Middlesex University, UK.</li>
-          <li>Dr Scott Sherwood, Department of Computer Science, University of Glasgow, UK.</li>
-          <li>Prof. Atau Tanaka, Goldsmiths University of London, UK.</li>
-          <li>Prof. Joanne Tompkins, School of English, Media Studies, and Art History, University of Queensland, Australia.</li>
-          <li>Prof. Lois Weaver, Department of Drama, Queen Mary University of London, UK.</li>
-          <li>Prof. Peter Wright, Culture Lab, Newcastle University, UK.</li>
-          <li>Penelope Woods, Shakespeare's Globe Theatre & Queen Mary University of London, UK.</li>
-        </ul>
-      </section>
-      <section>
-        <h2>Local Organisers</h2>
-        <ul>
-        <li>Saul Albert, Media & Arts Technology DTC, Queen Mary University of London.</li>
-        <li>Rachel Gomme, Department of Drama, Queen Mary University of London.</li>
-        <li>Toby Harris, Media & Arts Technology DTC, Queen Mary University of London.</li>
-        <li>Rachel Oxley, Department of Drama, Queen Mary University of London.</li>
-        <li>Christine Twite, Department of Drama, Queen Mary University of London.</li>
-        <li>Howard Williams, School of Electronic Engineering and Computer Science, Queen Mary University of London.</li>
-        </ul>
-      </section>
+		  <div id="cfp" class="wrapper">
+  		  <header>
+    		  <a name="cfp"></a>
+  		    <h1>Call for proposals</h1>
+  		  </header>
+        <section>
+          <h2>Outline</h2>
+          <p>People in audiences act: they talk, clap, heckle, sigh, inhale, exhale, rustle, twitch, tweet, dance, flirt, laugh, whisper, shuffle, cough... in doing so, they interact. There is a structure and dynamic to these responses which is central to the experience of being in a live audience. This workshop aims to bring together researchers and professionals with interests in performance, interaction and technology who are working on understanding, instrumenting or experimenting with these dynamics, and the shifting ends of audience that they reveal.</p>
+          <p>We invite proposals for oral presentations, live demonstrations, installations and performance experiments that explore the nature of interaction in audiences. We especially welcome interventions, participatory formats and creative approaches to convening workshop sessions. Topics include but are not restricted to:<br>
+          <ul>
+            <li>the dynamics of collective and individual experiences of performance,</li>
+            <li>the communicative organisation of audience-audience interaction,</li>
+            <li>non-verbal interaction and emotional contagion,</li>
+            <li>remote and co-present audience interactions,</li>
+            <li>the phenomenology of audience interaction,</li>
+            <li>changing historical and cultural understanding of the audience,</li>
+            <li>technologies and methods for sensing audience dynamics,</li>
+            <li>technologies and methods for enhancing and manipulating audience engagement.</li>
+          </ul>
+          </p>
+        </section>		  
+        <section>
+          <h2>Location</h2>
+          <p>The workshop will take place in the new Arts 2 building at Queen Mary University of London. Spaces include black box theatre, lecture theatre, foyer and breakout rooms. Specifications are available on request.</p>
+        </section>
+        <section>
+          <h2>Submission Format</h2>
+          <p>A two page summary including: a 300 word abstract, methods and rationale for your work, a specification of format and any technical requirements.</p>
+          <p>Document in PDF format submitted via email to: <a href="mailto:audience@qmedia.qmul.ac.uk?Subject=EofA Proposal">audience@qmedia.qmul.ac.uk</a></p>
+          <p>To be submitted by Monday 30th January, Midnight GMT.</p>
+        </section>
+        <section>
+          <h2>Workshop Chairs</h2>
+          <ul>
+            <li>Prof. Pat Healey, School of Electronic Engineering and Computer Science, Queen Mary University of London, London.</li>
+            <li>Prof. Michael Schober, Department of Psychology, New School, New York.</li>
+            <li>Dr Martin Welton, Department of Drama, Queen Mary University of London, London.</li>
+          </ul>
+        </section>
+        <section>
+          <h2>Programme Committee</h2>
+          <ul>
+            <li>Prof. Martin Barker, Theatre, Film and Television Studies, Aberystwyth University, UK.</li>
+            <li>Mathias Broth, Associate Professor, Department of Culture and Communication (IKK), Linköping University, Sweden.</li>
+            <li>Prof. Elaine Chew, School of Electronic Engineering and Computer Science, Queen Mary University of London, UK.</li>
+            <li>Prof. Beryl Graham, Curatorial Resource for Upstart Media Bliss, University of Sunderland, UK.</li>
+            <li>Dr Sarah Cook, Curatorial Resource for Upstart Media Bliss, University of Sunderland, UK.</li>
+            <li>Steve Dietz, Artistic Director & President, Northern Lights.mn, Minneapolis, USA.</li>
+            <li>Darren O'Donnell, Artistic Director Mammalian Diving Reflex, Toronto, Canada.</li>
+            <li>Colombine Gardair, Interaction, Media and Communication Research Group, Queen Mary University of London, UK.</li>
+            <li>Prof. Barry Ife, Guildhall School of Music & Drama, London, UK.</li>
+            <li>Prof. Ann Light, School of Design, Northumbria University, UK.</li>
+            <li>Prof. Paul Luff. Centre for Work, Interaction and Technology, King's College, London, UK.</li>
+            <li>Eddie Nixon, Director of Theatre and Artist Development, The Place, London, UK.</li>
+            <li>Julian Priest, Researcher, Interdisciplinary Unit, A.U.T, Auckland, New Zealand.</li>
+            <li>Dr Stuart Reeves, Horizon Digital Economy Research, University of Nottingham, UK.</li>
+            <li>Nic Sandiland, Independent Artist & Middlesex University, UK.</li>
+            <li>Dr Scott Sherwood, Department of Computer Science, University of Glasgow, UK.</li>
+            <li>Prof. Atau Tanaka, Goldsmiths University of London, UK.</li>
+            <li>Prof. Joanne Tompkins, School of English, Media Studies, and Art History, University of Queensland, Australia.</li>
+            <li>Prof. Lois Weaver, Department of Drama, Queen Mary University of London, UK.</li>
+            <li>Prof. Peter Wright, Culture Lab, Newcastle University, UK.</li>
+            <li>Penelope Woods, Shakespeare's Globe Theatre & Queen Mary University of London, UK.</li>
+          </ul>
+        </section>
+        <section>
+          <h2>Local Organisers</h2>
+          <ul>
+          <li>Saul Albert, Media & Arts Technology DTC, Queen Mary University of London.</li>
+          <li>Rachel Gomme, Department of Drama, Queen Mary University of London.</li>
+          <li>Toby Harris, Media & Arts Technology DTC, Queen Mary University of London.</li>
+          <li>Rachel Oxley, Department of Drama, Queen Mary University of London.</li>
+          <li>Christine Twite, Department of Drama, Queen Mary University of London.</li>
+          <li>Howard Williams, School of Electronic Engineering and Computer Science, Queen Mary University of London.</li>
+          </ul>
+        </section>
+      </div>
 		</article>
 		<article>
+		  <div class="wrapper">
 		    <header>
   		    <a name="resources"></a>
 		      <h1>Resources</h1>
@@ -158,7 +162,9 @@
 		      <li>Arts2 Venues Link…?</li>
 		      <li>qMedia / IMC / Drama links?</li>
 		    </ul>
+		  </div>
 		</article>
+		  <div class="wrapper">
 				<article>
 		    <header>
   		    <a name="contact"></a>
@@ -166,6 +172,7 @@
 		    </header>
 		    <p>All correspondence to: <a href:"mailto:audience@qmedia.qmul.ac.uk">audience@qmedia.qmul.ac.uk</a></p>
 		    <p>Postal address? Contact for XYZ?</p>
+		  </div>
 		</article>	  
 	</body>
 	
