--- a/EofA Website/index.html
+++ b/EofA Website/index.html
@@ -64,7 +64,8 @@
 				  </div>
 			</div>
 			<div class="caption-box">
-				<div class="caption-arrow-left">
+				<div class="caption-arrow-top">
+				<div class="caption-arrow-leftspacer">
 				    <p class="caption-text">This workshop aims to bring together researchers and professionals with interests in performance, interaction and technology who are working on understanding, instrumenting or experimenting with these dynamics, and the shifting ends of audience that they reveal.</p>
 				</div>
 			</div>
@@ -75,6 +76,7 @@
 		  <div id="cfp" class="wrapper">
   		  <header>
     		  <a name="cfp"></a>
+  			  <a href="#top" class="toplink">top</a>
   		    <h1>Call for proposals</h1>
   		  </header>
         <section>
@@ -154,6 +156,7 @@
 		  <div class="wrapper">
 		    <header>
   		    <a name="resources"></a>
+  		    <a href="#top" class="toplink">top</a>
 		      <h1>Resources</h1>
 		    </header>
 		    <ul>
@@ -168,6 +171,7 @@
 				<article>
 		    <header>
   		    <a name="contact"></a>
+  		    <a href="#top" class="toplink">top</a>
 		      <h1>Contact</h1>
 		    </header>
 		    <p>All correspondence to: <a href:"mailto:audience@qmedia.qmul.ac.uk">audience@qmedia.qmul.ac.uk</a></p>
