Added a txt version, copied the flyer into a poster pdf, and updated css and index.  Please do feel free to re-edit, but please don't put in things like
<header>
</header>
<article>
</article>

Those aren't html tags, I'm not sure what they are... :)

--- a/EofA Website/index.html
+++ b/EofA Website/index.html
@@ -14,7 +14,7 @@
 	</head>
 	
 	<body lang="en">
-		<header id="masthead">
+		<div id="masthead">
 			<div class="wrapper">
 				<div class="nav">
 					  <ul>
@@ -47,16 +47,16 @@
 					<a href="http://www.qmul.ac.uk"><img class="logo" src="http://www.qmul.ac.uk/qmcms/images/qmlogodept.png" alt="Queen Mary, University of London" width="200" height="53"></a>
 				</div>
 			</div>
-		</header>
-		<article>
+		</div>
+		<div id="article">
 			<div id="flyer" class="wrapper">
-			  <header>
+			  <div id="header">
   			<div class="flyerheader">
   			  <a name="flyer"></a>
   			  <h1>Ends of Audience</h1>
           <h2>An interdisciplinary workshop on audiences and interaction</h2>
   			</div>
-  			</header>
+  			</div>
         <div id="contentwrapper">
           <div class="caption-box">
             <div class="caption-arrow-left">
@@ -64,22 +64,20 @@
 				  </div>
 			</div>
 			<div class="caption-box">
-				<div class="caption-arrow-top">
 				<div class="caption-arrow-leftspacer">
 				    <p class="caption-text">This workshop aims to bring together researchers and professionals with interests in performance, interaction and technology who are working on understanding, instrumenting or experimenting with these dynamics, and the shifting ends of audience that they reveal.</p>
 				</div>
 			</div>
-        </div>
       </div>
-		</article>
-		<article>
+		</div>
+		<div id="article">
 		  <div id="cfp" class="wrapper">
-  		  <header>
+  		  <div id="header">
     		  <a name="cfp"></a>
   			  <a href="#top" class="toplink">top</a>
   		    <h1>Call for proposals</h1>
-  		  </header>
-        <section>
+  		  </div>
+        <div id="section">
           <h2>Outline</h2>
           <p>People in audiences act: they talk, clap, heckle, sigh, inhale, exhale, rustle, twitch, tweet, dance, flirt, laugh, whisper, shuffle, cough... in doing so, they interact. There is a structure and dynamic to these responses which is central to the experience of being in a live audience. This workshop aims to bring together researchers and professionals with interests in performance, interaction and technology who are working on understanding, instrumenting or experimenting with these dynamics, and the shifting ends of audience that they reveal.</p>
           <p>We invite proposals for oral presentations, live demonstrations, installations and performance experiments that explore the nature of interaction in audiences. We especially welcome interventions, participatory formats and creative approaches to convening workshop sessions. Topics include but are not restricted to:<br>
@@ -94,26 +92,26 @@
             <li>technologies and methods for enhancing and manipulating audience engagement.</li>
           </ul>
           </p>
-        </section>		  
-        <section>
+        </div>		  
+        <div id="section">
           <h2>Location</h2>
-          <p>The workshop will take place in the new Arts 2 building at Queen Mary University of London. Spaces include black box theatre, lecture theatre, foyer and breakout rooms. Specifications are available on request.</p>
-        </section>
-        <section>
+	  <p>The workshop will take place in the new <a href="http://www.flickr.com/photos/qmul/5839239502/" target="_blank">Arts 2 building</a> at Queen Mary University of London. Spaces include black box theatre, lecture theatre, foyer and breakout rooms. Specifications, visits and details about suitability for specific uses available on request, more general <a href="#resources">venue information</a> coming soon.</p>
+        </div>
+        <div id="section">
           <h2>Submission Format</h2>
           <p>A two page summary including: a 300 word abstract, methods and rationale for your work, a specification of format and any technical requirements.</p>
           <p>Document in PDF format submitted via email to: <a href="mailto:audience@qmedia.qmul.ac.uk?Subject=EofA Proposal">audience@qmedia.qmul.ac.uk</a></p>
           <p>To be submitted by Monday 30th January, Midnight GMT.</p>
-        </section>
-        <section>
+        </div>
+        <div id="section">
           <h2>Workshop Chairs</h2>
           <ul>
             <li>Prof. Pat Healey, School of Electronic Engineering and Computer Science, Queen Mary University of London, London.</li>
             <li>Prof. Michael Schober, Department of Psychology, New School, New York.</li>
             <li>Dr Martin Welton, Department of Drama, Queen Mary University of London, London.</li>
           </ul>
-        </section>
-        <section>
+        </div>
+        <div id="section">
           <h2>Programme Committee</h2>
           <ul>
             <li>Prof. Martin Barker, Theatre, Film and Television Studies, Aberystwyth University, UK.</li>
@@ -138,8 +136,8 @@
             <li>Prof. Peter Wright, Culture Lab, Newcastle University, UK.</li>
             <li>Penelope Woods, Shakespeare's Globe Theatre & Queen Mary University of London, UK.</li>
           </ul>
-        </section>
-        <section>
+        </div>
+        <div id="section">
           <h2>Local Organisers</h2>
           <ul>
           <li>Saul Albert, Media & Arts Technology DTC, Queen Mary University of London.</li>
@@ -149,35 +147,43 @@
           <li>Christine Twite, Department of Drama, Queen Mary University of London.</li>
           <li>Howard Williams, School of Electronic Engineering and Computer Science, Queen Mary University of London.</li>
           </ul>
-        </section>
+        </div>
       </div>
-		</article>
-		<article>
+		</div>
+		<div id="article">
 		  <div class="wrapper">
-		    <header>
+		    <div id="header">
   		    <a name="resources"></a>
   		    <a href="#top" class="toplink">top</a>
 		      <h1>Resources</h1>
-		    </header>
+		    </div>
+		    <div id="section">
 		    <ul>
-		      <li>Call for Proposals [TXT]</li>
-		      <li>Workshop Poster [PDF]</li>
-		      <li>Arts2 Venues Link…?</li>
-		      <li>qMedia / IMC / Drama links?</li>
+		      <li>Call for Proposals <a href="ends-of-audience-cfp.txt">[TXT]</a> (to include in emails)</li>
+		      <li>Workshop Poster <a href="poster.pdf">[PDF]</a></li>
+		      <li><a href="http://www.flickr.com/photos/qmul/5839239502/">Arts2</a> (more venue information coming soon)</li>
+		      <li><a href="http://www.qmedia.qmul.ac.uk/">qMedia</a> / <a href="http://www.dcs.qmul.ac.uk/research/imc/">IMC</a> / <a href="http://www.drama.qmul.ac.uk/">Drama</a></li>
 		    </ul>
 		  </div>
-		</article>
+		  </div>
+		</div>
 		  <div class="wrapper">
-				<article>
-		    <header>
+				<div id="article">
+		    <div id="header">
   		    <a name="contact"></a>
   		    <a href="#top" class="toplink">top</a>
 		      <h1>Contact</h1>
-		    </header>
-		    <p>All correspondence to: <a href:"mailto:audience@qmedia.qmul.ac.uk">audience@qmedia.qmul.ac.uk</a></p>
-		    <p>Postal address? Contact for XYZ?</p>
+		    </div>
+		    <div id="section">
+		      <p>Please direct all correspondence to: <a href="mailto:audience@qmedia.qmul.ac.uk">audience@qmedia.qmul.ac.uk</a></p>
+		      <br /> <br />
+		      <p>Ends of Audience Workshop <br />
+		      School of Electronic Engineering and Computer Science<br />
+		      Queen Mary, University of London <br />
+		      London E1 4NS </p>
 		  </div>
-		</article>	  
+		  </div>
+		</div>	  
 	</body>
 	
 </html>
