Final Toby tweaks plus mobile CSS'd done.
...and thems was HTML5 semantic tags, Saul.

--- a/EofA Website/index.html
+++ b/EofA Website/index.html
@@ -7,8 +7,8 @@
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-		<link rel="stylesheet" media="all" href="eofa-lessframework.css"/>
 		<link rel="stylesheet" media="all" href="eofa-style.css"/>
+		<link rel="stylesheet" media="all" href="eofa-lessframework.css"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<!-- Adding "maximum-scale=1" fixes the Mobile Safari auto-zoom bug: http://filamentgroup.com/examples/iosScaleBug/ -->
 	</head>
@@ -74,7 +74,7 @@
 		  <div id="cfp" class="wrapper">
   		  <div id="header">
     		  <a name="cfp"></a>
-  			  <a href="#top" class="toplink">top</a>
+  			  <a href="#top" class="toplink"><br>top</a>
   		    <h1>Call for proposals</h1>
   		  </div>
         <div id="section">
@@ -154,15 +154,17 @@
 		  <div class="wrapper">
 		    <div id="header">
   		    <a name="resources"></a>
-  		    <a href="#top" class="toplink">top</a>
+  		    <a href="#top" class="toplink"><br>top</a>
 		      <h1>Resources</h1>
 		    </div>
 		    <div id="section">
 		    <ul>
-		      <li>Call for Proposals <a href="ends-of-audience-cfp.txt">[TXT]</a> (to include in emails)</li>
-		      <li>Workshop Poster <a href="poster.pdf">[PDF]</a></li>
+		      <li>Call for Proposals <a href="resources/ends-of-audience-cfp.txt">[TXT]</a> (to include in emails)</li>
+		      <li>Workshop Poster <a href="resources/ends-of-audience--poster-dec11.pdf">[PDF]</a></li>
 		      <li><a href="http://www.flickr.com/photos/qmul/5839239502/">Arts2</a> (more venue information coming soon)</li>
-		      <li><a href="http://www.qmedia.qmul.ac.uk/">qMedia</a> / <a href="http://www.dcs.qmul.ac.uk/research/imc/">IMC</a> / <a href="http://www.drama.qmul.ac.uk/">Drama</a></li>
+		      <li>qMedia - Science and technology research for media and the arts <a href="http://www.qmedia.qmul.ac.uk/">[website]</a></li>
+		      <li>QMUL Interaction, Media and Communication Research Group <a href="http://www.dcs.qmul.ac.uk/research/imc/">[website]</a></li>
+		      <li>QMUL Department of Drama <a href="http://www.drama.qmul.ac.uk/">[website]</a></li>
 		    </ul>
 		  </div>
 		  </div>
@@ -171,7 +173,7 @@
 				<div id="article">
 		    <div id="header">
   		    <a name="contact"></a>
-  		    <a href="#top" class="toplink">top</a>
+  		    <a href="#top" class="toplink"><br>top</a>
 		      <h1>Contact</h1>
 		    </div>
 		    <div id="section">
