Added Steve Benford to PC; Tweaked mobile CSS padding

--- a/EofA Website/index.html
+++ b/EofA Website/index.html
@@ -115,6 +115,7 @@
           <h2>Programme Committee</h2>
           <ul>
             <li>Prof. Martin Barker, Theatre, Film and Television Studies, Aberystwyth University, UK.</li>
+            <li>Prof. Steve Benford, Mixed Reality Lab, School of Computer Science, Nottingham, UK.</li>
             <li>Mathias Broth, Associate Professor, Department of Culture and Communication (IKK), Linköping University, Sweden.</li>
             <li>Prof. Elaine Chew, School of Electronic Engineering and Computer Science, Queen Mary University of London, UK.</li>
             <li>Prof. Beryl Graham, Curatorial Resource for Upstart Media Bliss, University of Sunderland, UK.</li>
